--- a/owner/owner/owner.csproj
+++ b/owner/owner/owner.csproj
@@ -285,6 +285,9 @@
     <None Update="ColumnPopup.xaml">
       <Generator>MSBuild:Compile</Generator>
     </None>
+    <None Update="ConfirmEmailPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </None>
     <None Update="ConfirmReportAddPage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </None>
