--- a/owner/owner.iOS/Info.plist
+++ b/owner/owner.iOS/Info.plist
@@ -27,17 +27,17 @@
 	<key>MinimumOSVersion</key>
 	<string>8.0</string>
 	<key>CFBundleDisplayName</key>
-	<string>BudiOwner</string>
+	<string>budi concierge</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.xamarin.budi.owner</string>
 	<key>CFBundleVersion</key>
 	<string>1.0</string>
 	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
+	<string>(not set)</string>
 	<key>CFBundleName</key>
 	<string>owner</string>
 	<key>XSAppIconAssets</key>
-	<string>Assets.xcassets/AppIcon.appiconset</string>
+	<string>Assets.xcassets/AppIcons.appiconset</string>
 	<key>Privacy - Camera Usage Description</key>
 	<string>This app needs access to the camera to scan barcodes and take photos</string>
 	<key>NSPhotoLibraryUsageDescription</key>
