--- a/owner/owner/owner.csproj
+++ b/owner/owner/owner.csproj
@@ -207,6 +207,9 @@
     <EmbeddedResource Update="RegisterStep3.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="RulePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="SaleEstimateCompletePagexaml.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
@@ -424,6 +427,9 @@
       <Generator>MSBuild:Compile</Generator>
     </None>
     <None Update="RegisterStep3.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </None>
+    <None Update="RulePage.xaml">
       <Generator>MSBuild:Compile</Generator>
     </None>
     <None Update="SaleEstimateCompletePagexaml.xaml">
