--- a/owner/owner.iOS/Info.plist
+++ b/owner/owner.iOS/Info.plist
@@ -13,8 +13,8 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
@@ -29,8 +29,6 @@
 	<string>budi concierge</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.xamarin.budi.owner</string>
-	<key>CFBundleVersion</key>
-	<string>1.0</string>
 	<key>UILaunchStoryboardName</key>
 	<string>(not set)</string>
 	<key>CFBundleName</key>
@@ -52,7 +50,17 @@
 	</dict>
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+	<key>CFBundleVersion</key>
+	<string>5</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>This app needs access to the calendar to show monthly data</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>This app needs location access.</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>This app needs access to location.</string>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/AppIcons1.appiconset</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs access to camera to take photo.</string>
 </dict>
 </plist>
