--- a/owner/owner.Android/Properties/AndroidManifest.xml
+++ b/owner/owner.Android/Properties/AndroidManifest.xml
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.xamarin.budi.owner" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="27" />
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="2" android:versionName="1.0" package="com.xamarin.budi.owner" android:installLocation="internalOnly">
+	<uses-sdk android:minSdkVersion="20" android:targetSdkVersion="28" />
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.READ_INPUT_STATE" />
@@ -9,7 +9,7 @@
 	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-	<application android:label="budi concierge" android:screenOrientation="portrait" android:icon="@drawable/appicon">
+	<application android:label="budi concierge" android:screenOrientation="portrait" android:icon="@drawable/appicon" android:supportsRtl="true">
 		<provider android:name="android.support.v4.content.FileProvider" android:authorities="${applicationId}.fileprovider" android:exported="false" android:grantUriPermissions="true">
 			<meta-data android:name="android.support.FILE_PROVIDER_PATHS" android:resource="@xml/file_paths" />
 		</provider>
@@ -22,5 +22,4 @@
 			</intent-filter>
 		</receiver>
 	</application>
-	<application android:supportsRtl="true"></application>
 </manifest>
